name:                gym-http-api
version:             0.1.0.0
synopsis:            Haskell bindings for openai-gym.
homepage:            https://github.com/opengi/gym-http-api
license:             MIT
license-file:        ../LICENSE
author:              Frederick Mayle <frederickmayle@gmail.com>
maintainer:          Frederick Mayle <frederickmayle@gmail.com>
copyright:           2016 OpenAI (http://openai.com)
category:            AI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     OpenAI.Gym
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , lens
                     , lens-aeson
                     , random
                     , text
                     , unordered-containers
                     , vector
                     , wreq

executable RandomAgent
  default-language:    Haskell2010
  main-is:             RandomAgent.hs
  hs-source-dirs:      examples
  build-depends:       base >= 4.7 && < 5
                     , extra
                     , gym-http-api

source-repository head
  type:     git
  location: https://github.com/openai/gym-http-api
